--- a/cai-auth/pom.xml
+++ b/cai-auth/pom.xml
@@ -12,4 +12,22 @@
     <artifactId>cai-auth</artifactId>
 
 
+
+    <dependencies>
+        <dependency>
+            <groupId>com.cai</groupId>
+            <artifactId>cai-dependencies</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security.oauth</groupId>
+            <artifactId>spring-security-oauth2</artifactId>
+            <version>2.3.5.RELEASE</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+    </dependencies>
 </project>
