--- a/cai-order/order-service/pom.xml
+++ b/cai-order/order-service/pom.xml
@@ -11,5 +11,17 @@
 
     <artifactId>order-service</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.cai</groupId>
+            <artifactId>user-api</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
 
+        <dependency>
+            <groupId>com.cai</groupId>
+            <artifactId>cai-dependencies</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 </project>
