--- a/cai-user/user-service/pom.xml
+++ b/cai-user/user-service/pom.xml
@@ -14,6 +14,12 @@
     <dependencies>
         <dependency>
             <groupId>com.cai</groupId>
+            <artifactId>user-api</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.cai</groupId>
             <artifactId>cai-dependencies</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
